--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -252,10 +252,9 @@
 % Colors for drawing operations and so forth are split into strokes and fills
 % (the latter may also be referred to as non-stroke color). These operations
 % \emph{may} apply to text, but this is backend-depended and the general
-% \cs{color_select:n(n)} should be used for typeset text. In contrast to
-% general color, these operations are \emph{not} stacked and thus must
-% \emph{not} split across pages. Also, an appropriate scope must be applied
-% to the color change, for example \cs{draw_begin:}/\cs{draw_end:}.
+% \cs{color_select:n(n)} should be used for typeset text. An appropriate scope
+% must be applied to the color change, for example
+% \cs{draw_begin:}/\cs{draw_end:}.
 %
 % \begin{function}{\color_fill:n, \color_stroke:n}
 %   \begin{syntax}
