--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -91,7 +91,6 @@
 %     \@@_backend_select_rgb:n
 %   }
 % \begin{macro}{\@@_backend_reset:}
-% \begin{macro}{color.sc, color.fc}
 %    Push the data to the stack.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_select_cmyk:n #1
@@ -104,7 +103,6 @@
 \cs_new_protected:Npn \@@_backend_reset:
   { \__kernel_backend_literal:n { pdf: ec } }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 %
@@ -782,7 +780,7 @@
 % \texttt{dvisvgm} independently, as there we can create SVG directly.
 %
 %    \begin{macrocode}
-%<*dvipdfmx|luatex|pdftex|xetex>
+%<*luatex|pdftex>
 %    \end{macrocode}
 %
 % \begin{macro}
@@ -794,24 +792,22 @@
 %     \@@_backend_stroke_gray:n ,
 %     \@@_backend_stroke_rgb:n
 %   }
-%   Drawing (fill/stroke) color is handled in \texttt{dvipdfmx}/\XeTeX{} in the
-%   same way as \LuaTeX{}/\pdfTeX{}. We use the same approach as earlier, except the
-%   color stack is not involved so the generic direct PDF operation is used.
+%   Drawing (fill/stroke) color is handled using the same approach as earlier.
 %   There is no worry about the nature of strokes: everything is handled
 %   automatically.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_fill_cmyk:n #1
-  { \__kernel_backend_literal_pdf:n { #1 ~ k } }
+  { \@@_backend_select:n { #1 ~ k } }
 \cs_new_protected:Npn \@@_backend_fill_gray:n #1
-  { \__kernel_backend_literal_pdf:n { #1 ~ g } }
+  { \@@_backend_select:n { #1 ~ g } }
 \cs_new_protected:Npn \@@_backend_fill_rgb:n #1
-  { \__kernel_backend_literal_pdf:n { #1 ~ rg } }
+  { \@@_backend_select:n { #1 ~ rg } }
   \cs_new_protected:Npn \@@_backend_stroke_cmyk:n #1
-  { \__kernel_backend_literal_pdf:n { #1 ~ K } }
+  { \@@_backend_select:n { #1 ~ K } }
 \cs_new_protected:Npn \@@_backend_stroke_gray:n #1
-  { \__kernel_backend_literal_pdf:n { #1 ~ G } }
+  {\@@_backend_select:n { #1 ~ G } }
 \cs_new_protected:Npn \@@_backend_stroke_rgb:n #1
-  { \__kernel_backend_literal_pdf:n { #1 ~ RG } }
+  { \@@_backend_select:n { #1 ~ RG } }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -824,16 +820,16 @@
 %   }
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_fill_separation:nn #1#2
-  { \__kernel_backend_literal_pdf:n { /#1 ~ cs ~ #2 ~ scn } }
+  { \@@_backend_select:n { /#1 ~ cs ~ #2 ~ scn } }
 \cs_new_protected:Npn \@@_backend_stroke_separation:nn #1#2
-  { \__kernel_backend_literal_pdf:n { /#1 ~ CS ~ #2 ~ SCN } }
+  { \@@_backend_select:n { /#1 ~ CS ~ #2 ~ SCN } }
 \cs_new_eq:NN \@@_backend_fill_devicen:nn \@@_backend_fill_separation:nn
 \cs_new_eq:NN \@@_backend_stroke_devicen:nn \@@_backend_stroke_separation:nn
 %    \end{macrocode}
 % \end{macro}
 %
 %    \begin{macrocode}
-%</dvipdfmx|luatex|pdftex|xetex>
+%</luatex|pdftex>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
