--- a/l3kernel/doc/source3body.tex
+++ b/l3kernel/doc/source3body.tex
@@ -454,6 +454,7 @@ used on top of \LaTeXe{} if \cs{outer} tokens are used in the arguments.
 \DocInput{l3str-convert.dtx}
 \DocInput{l3seq.dtx}
 \DocInput{l3int.dtx}
+\DocInput{l3bitset.dtx}
 \DocInput{l3flag.dtx}
 \DocInput{l3prg.dtx}
 \DocInput{l3sys.dtx}
